<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/wordseekWelcomeBanner"
        android:layout_width="319dp"
        android:layout_height="523dp"
        android:src="@drawable/banner"
        app:layout_constraintBottom_toBottomOf="@+id/mainRegisterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/mainLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#5D95F0"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="LOGIN"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordseekWelcomeBanner" />

    <Button
        android:id="@+id/mainRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#5D95F0"
        android:textColor="@color/black"
        android:text="REGISTER"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLoginBtn"
        app:layout_constraintVertical_bias="0.278" />

</androidx.constraintlayout.widget.ConstraintLayout>